// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auto createLabels should create the labels 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "description": "Preserve the current version when merged",
          "name": "skip-release",
          "releaseType": "skip",
        },
        Object {
          "description": "Create a release when this pr is merged",
          "name": "release",
          "releaseType": "release",
        },
        Object {
          "description": "Changes only affect the internal API",
          "name": "internal",
          "releaseType": "none",
          "title": "🏠  Internal",
        },
        Object {
          "description": "Changes only affect the documentation",
          "name": "documentation",
          "releaseType": "none",
          "title": "📝  Documentation",
        },
        Object {
          "description": "Increment the major version when merged",
          "name": "Version: Major",
          "overwrite": true,
          "releaseType": "major",
          "title": "💥  Breaking Change",
        },
        Object {
          "description": "Increment the patch version when merged",
          "name": "Version: Patch",
          "overwrite": true,
          "releaseType": "patch",
          "title": "🐛  Bug Fix",
        },
        Object {
          "description": "Increment the minor version when merged",
          "name": "Version: Minor",
          "overwrite": true,
          "releaseType": "minor",
          "title": "🚀  Enhancement",
        },
      ],
      Object {},
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Auto should extend config 1`] = `
Object {
  "baseBranch": "master",
  "extends": "@artsy",
  "labels": Array [
    Object {
      "description": "Increment the major version when merged",
      "name": "major",
      "releaseType": "major",
      "title": "💥  Breaking Change",
    },
    Object {
      "description": "Increment the minor version when merged",
      "name": "minor",
      "releaseType": "minor",
      "title": "🚀  Enhancement",
    },
    Object {
      "description": "Increment the patch version when merged",
      "name": "patch",
      "releaseType": "patch",
      "title": "🐛  Bug Fix",
    },
    Object {
      "description": "Preserve the current version when merged",
      "name": "skip-release",
      "releaseType": "skip",
    },
    Object {
      "description": "Create a release when this pr is merged",
      "name": "release",
      "releaseType": "release",
    },
    Object {
      "description": "Changes only affect the internal API",
      "name": "internal",
      "releaseType": "none",
      "title": "🏠  Internal",
    },
    Object {
      "description": "Changes only affect the documentation",
      "name": "documentation",
      "releaseType": "none",
      "title": "📝  Documentation",
    },
  ],
  "onlyPublishWithReleaseLabel": true,
  "owner": "foo",
  "prereleaseBranches": Array [
    "next",
  ],
  "repo": "bar",
  "skipReleaseLabels": Array [
    "skip-release",
  ],
  "token": "XXXX",
}
`;

exports[`Auto should extend local config 1`] = `
Object {
  "bar": "foo",
  "baseBranch": "master",
  "extends": "./fake.json",
  "labels": Array [
    Object {
      "description": "Increment the major version when merged",
      "name": "major",
      "releaseType": "major",
      "title": "💥  Breaking Change",
    },
    Object {
      "description": "Increment the minor version when merged",
      "name": "minor",
      "releaseType": "minor",
      "title": "🚀  Enhancement",
    },
    Object {
      "description": "Increment the patch version when merged",
      "name": "patch",
      "releaseType": "patch",
      "title": "🐛  Bug Fix",
    },
    Object {
      "description": "Preserve the current version when merged",
      "name": "skip-release",
      "releaseType": "skip",
    },
    Object {
      "description": "Create a release when this pr is merged",
      "name": "release",
      "releaseType": "release",
    },
    Object {
      "description": "Changes only affect the internal API",
      "name": "internal",
      "releaseType": "none",
      "title": "🏠  Internal",
    },
    Object {
      "description": "Changes only affect the documentation",
      "name": "documentation",
      "releaseType": "none",
      "title": "📝  Documentation",
    },
  ],
  "owner": "foo",
  "prereleaseBranches": Array [
    "next",
  ],
  "repo": "bar",
  "skipReleaseLabels": Array [
    "skip-release",
  ],
  "token": "XXXX",
}
`;
